Fixed SunPy AF table cut off on Firefox

--- a/sunpy_sphinx_theme/sunpy/static/style.css
+++ b/sunpy_sphinx_theme/sunpy/static/style.css
@@ -63,6 +63,14 @@ div.section::before {
   margin-bottom: 3em;
 }
 
+.row {
+	overflow-x: scroll;
+}
+
+.row::-webkit-scrollbar {
+  display: none;
+}
+
 /* Navbar */
 
 .navbar {
